<resources>
    <string name="app_name">Evaa Online</string>
    <string name="sendotp_key">304579AWY4UCQsErJ5dd38f1e</string>
    <string name="rupee">QAR </string>
    <string name="notification_channel_id">1</string>
    <string name="menu">MENU</string>
    <string name="shop_by_category">Shop By Category</string>
    <string name="shop_by_choice">Shop By Choice</string>
    <string name="shop_by_product">Shop By Product</string>
    <string name="recently_viewed">Recently View</string>
    <string name="on_facebook">On FaceBook</string>
    <string name="lifestylestores">/lifestylestores</string>
    <string name="on_twitter">On Twitter</string>
    <string name="lifestyle_store">Lifestyle_Store</string>
    <string name="follow">Follow</string>
    <string name="home_connect_with_neomi_fashion">CONNECT WITH EVAA FASHION</string>
    <string name="home_lbl_subscribe">SUBSCRIBE</string>
    <string name="home__hint_sign_up_for_email_updates">Sign up for email updates</string>
    <string name="home_join">JOIN!</string>
    <string name="home_neomi_fashion_rights_reserved">2019 Evaa Fashion. All Rights Reserved</string>
    <string name="reg_hint_email_address">Email Address*</string>
    <string name="reg_hint_password">Password</string>
    <string name="reg_btn_show">show</string>
    <string name="reg_hint_mobile_number">Mobile Number(for order updates)</string>
    <string name="reg_hint_full_name">Full Name</string>
    <string name="reg_male">Male</string>
    <string name="reg_female">Female</string>
    <string name="reg_cb_referral_code">I have a referral code</string>
    <string name="reg_btn_create_account">Create Account</string>
    <string name="send_otp">Send OTP</string>
    <string name="didn_t_receive_the_otp_1_minutes_resend_otp">Didn\'t Receive The OTP 1 Minutes?</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="country_code">Country Code</string>
    <string name="reg_enter_email">Please enter email</string>
    <string name="reg_enter_name">Please enter name</string>
    <string name="reg_enter_valid_email">Please enter valid email ID!</string>
    <string name="reg_enter_password">Please enter password</string>
    <string name="reg_password_length_msg">Password should have minimum 6 character and maximum 20 character!</string>
    <string name="reg_enter_mobile_number">Please enter mobile number</string>
    <string name="reg_enter_full_name">Please enter your full name</string>
    <string name="reg_select_gender">Please select gender</string>
    <string name="reg_enter_mobileno">Please Enter Mobile no.</string>
    <string name="reg_enter_valid_mobileno">Please put 8 digit mobile number</string>
    <string name="reg_enter_valid_otp">Please enter a valid OTP</string>
    <string name="please_enter_your_mobile_number">Please enter your mobile no</string>
    <string name="please_enter_country_code">Please enter country code</string>
    <string name="login_hint_mobile_or_email">Mobile Number</string>
    <string name="login_hint_password">Password</string>
    <string name="login_btn_log_in">LOG IN</string>
    <string name="login_btn_sign_up">REGISTER USING OTP</string>
    <string name="login_btn_forgot_password">Forgot Password</string>
    <string name="my_profile_title">My Profile</string>
    <string name="my_profile_txt_home">Home</string>
    <string name="my_profile_txt_login">Login</string>
    <string name="my_profile_txt_my_order">Pending Orders</string>
    <string name="my_profile_txt_my_order_history">Order History</string>
    <string name="my_profile_txt_shipping_address">Shipping Address</string>
    <string name="my_profile_txt_settings">Settings</string>
    <string name="my_profile_txt_my_account">My Account</string>
    <string name="my_profile_txt_wishlist">Wishlist</string>
    <string name="my_profile_txt_log_out">Log Out</string>
    <string name="pd_txt_select_size">Select Size</string>
    <string name="pd_product_details">Product Details</string>
    <string name="pd_view_similar">VIEW SIMILAR</string>
    <string name="pd_review">Reviews</string>
    <string name="pd_review_msg_first_to_review">Be the first to review.</string>
    <string name="pd_review_msg_about_this_product">What do you think about this product?</string>
    <string name="write_a_review">Write a review</string>
    <string name="use_my_current_location">Use my current location</string>
    <string name="zipcode">Zipcode</string>
    <string name="house_no_building_name">House No., Building Name</string>
    <string name="street_name">Street Name</string>
    <string name="landmark_optional">Landmark(Optional)</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="status">Status</string>
    <string name="primary">Primary</string>
    <string name="choose_different_address">Choose Different Address</string>
    <string name="save">Save</string>
    <string name="add_new_address">Add New Address</string>
    <string name="please_enter_zipcode">Please Enter Zipcode</string>
    <string name="please_enter_houseno">Please Enter House no.</string>
    <string name="please_enter_streetname">Please Enter Street Name</string>
    <string name="please_enter_countryname">Please Enter Country Name</string>
    <string name="please_enter_statename">Please Enter State Name</string>
    <string name="please_enter_cityname">Please Enter City Name</string>
    <string name="select_an_action">Select an action</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter Email</string>
    <string name="change_password">Change Password</string>
    <string name="retry_with_call">Retry with Call</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="please_enter_old_pass">Please Enter Old Password</string>
    <string name="please_enter_new_pass">Please Enter New Password</string>
    <string name="please_enter_confirm_pass">Please Enter Confirm Password</string>
    <string name="password_not_match">Your password and confirmation password do not match.</string>
    <string name="forgetpassword">ForgetPassword</string>
    <string name="enter_password">Enter Password</string>
    <string name="title">Title</string>
    <string name="reviews">Reviews</string>
    <string name="please_enter_title">Please Enter Title</string>
    <string name="please_enter_review">Please Enter Review</string>
    <string name="your_order_has_been_placed_successfully">Your Order Has Been Placed Successfully</string>
    <string name="waiting_for_confirmation_from_merchant_side">Waiting for confirmation from merchant side</string>
    <string name="go_to_homepage">go to homepage</string>
    <string name="merchant_name">Merchant Name : </string>
    <string name="total_pay">Total Pay</string>
    <string name="cancle_order">Cancel Order</string>
    <string name="mobile_no_1">Mobile No. : </string>
    <string name="email_id">Email Id : </string>
    <string name="address">Address : </string>
    <string name="customer_name">Customer Name :</string>
    <string name="order">Order : </string>
    <string name="total_amount">Total Amount : </string>
    <string name="total_item">Total Item : </string>
    <string name="list_of_items">List Of Items</string>
    <string name="products">Products</string>
    <string name="qty">Qty</string>
    <string name="price">Price</string>
    <string name="my_orders">My Orders</string>
    <string name="pending_order">Pending Order</string>
    <string name="order_details">Order Details</string>
    <string name="order_status">Order Status</string>
    <string name="order_waiting">Order Waiting</string>
    <string name="details">Details</string>
    <string name="order_amount">Order Amount</string>
    <string name="are_you_sure_you_want_to_cancel_this_order">Are you sure you want to cancle this order?</string>
    <string name="sub_total">Sub Total</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="coupon_discount">Coupon Discount</string>
    <string name="total">Total</string>
    <string name="choose_supplier">Choose Supplier</string>
    <string name="add_to_wishlist">Add To WishList</string>
    <string name="added_to_wishlist">Added on Wishlist</string>
    <string name="add_to_bag">Add To Bag</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="added_to_cart">Added on Cart</string>
    <string name="added">ADDED</string>
    <string name="cart">Cart</string>
    <string name="update_cart">Update Cart</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="your_cart_is_empty">Your Cart is Empty</string>
    <string name="pelase_select_supplier">Please Select Supplier</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="bag">Bag</string>
    <string name="address1">Address</string>
    <string name="payment">Payment</string>
    <string name="options">OPTIONS</string>
    <string name="price_details">PRICE DETAILS</string>
    <string name="variant">Variant :</string>
    <string name="review_validation">Item Already added in Wishlist</string>
    <string name="cart_validation">Item Already added in Cart</string>
    <string name="select_address_validation">Please add shipping address</string>
    <string name="sort">Sort</string>
    <string name="filters">Filters</string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>
    <string name="internet_connection">No Internet Connection Available</string>
    <string name="logout_msg">Are you sure you want to logout?</string>
    <string name="App_exit">Are you sure you want to Exit form app?</string>
    <string name="delete_msg">Are you sure you want to Delete this ?</string>
    <string name="sort_by">Sort By</string>
    <string name="price_highest_first">Price (low to high)</string>
    <string name="price_lowest_first">Price(high to low)</string>
    <string name="name_atoz">Name(A to Z)</string>
    <string name="name_ztoa">Name(Z to A)</string>
    <string name="discount">Discount</string>
    <string name="cancle">Cancel</string>
    <string name="add">Add</string>
    <string name="select_language">Select Language</string>
    <string name="change_language">Change Language</string>
    <string name="show_notification">Show Notification</string>
    <string name="account">Account</string>
    <string name="wishlist">Wishlist</string>
    <string name="collection">Collection</string>
    <string name="next">Next</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="skip_now">Skip now</string>
    <string name="update">Update</string>
    <string name="no_data_found">No Product available</string>
    <string name="no_coupon_found">No Coupon available</string>
    <string name="action_settings">Settings</string>
    <string name="todo">TODO</string>
    <string name="please_wait">Please Wait</string>
    <string name="loading">Loading...</string>
    <string name="product_available">Products available</string>
    <string name="see_all">See All</string>
    <string name="featured_products">Featured Products</string>
    <string name="product_description">Product Description</string>
    <string name="stock">Stock :</string>
    <string name="sku">SKU :</string>
    <string name="category">Category :</string>
    <string name="continues">Continue</string>
</resources>