<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Activity.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:elevation="5dp"
                app:cardCornerRadius="4dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:inputType="number"
                        android:paddingLeft="15dp"
                        android:text="+974"
                        android:textColor="@android:color/black"
                        style="@style/customfontstyle"
                        android:textSize="15sp" />


                    <EditText
                        android:id="@+id/etEmailMobile"
                        style="@style/customfontstyle1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:hint="@string/login_hint_mobile_or_email"
                        android:inputType="phone"
                        android:padding="15dp"
                        android:textColor="@android:color/black" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:elevation="5dp"
                app:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/etPassword"
                        style="@style/customfontstyle1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:hint="@string/login_hint_password"
                        android:inputType="textPassword"
                        android:padding="15dp"
                        android:textColor="@android:color/black"
                        />

                    <LinearLayout
                        android:id="@+id/lnrpass"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/img_viewpass"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:src="@drawable/ic_eye1"
                            android:tint="@color/gray" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>



    </LinearLayout>

    <TextView
        android:id="@+id/btnLogin"
        style="@style/customfontstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="14dp"
        android:text="@string/login_btn_log_in"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/btnSignUp"
        style="@style/customfontstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bg_reg_simple"
        android:gravity="center"
        android:padding="14dp"
        android:text="@string/login_btn_sign_up"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/btnForgotPassword"
        style="@style/customfontstyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:textAllCaps="true"
        android:padding="5dp"
        android:text="@string/login_btn_forgot_password"
        android:textColor="@color/colorPrimary" />

    <LinearLayout
        android:id="@+id/lnr_skip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center|bottom"
        android:orientation="horizontal">

        <TextView
            style="@style/customfontstyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:gravity="center"
            android:text="@string/skip_now"
            android:textColor="@color/colorBlack"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/iv_rightarrow"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="2dp"
            android:src="@drawable/ic_next_double"
            android:tint="@color/colorBlack" />

    </LinearLayout>

</LinearLayout>